# lisaem

./: .gitignore  CMakeLists.txt  README
include/: built_by.h.in  machine.h
lisa/: zilog8530.c
wxui/: lisaem_wx.cpp
